--- a/template/mobile/new2/repair/pc_repair.html
+++ b/template/mobile/new2/repair/pc_repair.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>电脑维护</title>
+    <script src="__STATIC__/js/jquery-3.1.1.min.js"></script>
     <script src="__STATIC__/js/mui.min.js"></script>
+    <script src="__PUBLIC__/js/global.js"></script>
     <link type="text/css" href="__STATIC__/css/mui.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -14,74 +16,87 @@
 		</header>
 		<div class="mui-content">
 			<div class="mui-content-padded" style="margin: 5px;">
-				<form class="mui-input-group">
+				<form class="mui-input-group" action="{:U('Mobile/Repair/pc_repairs_add')}" method="post" id="pc_repair">
 							<div class="mui-input-row">
 								<label>联系人:</label>
-								<input type="text" placeholder="请输入联系人的姓名">
+								<input type="text" name="consignee" placeholder="请输入联系人的姓名">
 							</div>
 							<div class="mui-input-row">
 								<label>电话:</label>
-								<input type="text" class="mui-input-clear" placeholder="请输入联系电话">
+								<input type="text" class="mui-input-clear" name="mobile" id="mobile" placeholder="请输入联系电话" onkeyup="this.value=this.value.replace(/[^\d]/g,'')">
 							</div>
 		
 							<div class="mui-input-row">
 								<label>地址:</label>
-								<input type="text" class="mui-input-clear" placeholder="请输入取货地址">
+								<input type="text" class="mui-input-clear" name="address" id="address" placeholder="请输入取货地址">
 							</div>
 							<h5 class="mui-content-padded">请选择维修类型:</h5>
 							<ul class="mui-table-view mui-table-view-radio">
-								<li class="mui-table-view-cell">
-									<a class="mui-navigate-right">
-										笔记本电脑
-									</a>
+								<li class="mui-table-view-cell  mui-selected" id="pc1">
+									<a class="mui-navigate-right">笔记本电脑</a>
 								</li>
-								<li class="mui-table-view-cell mui-selected">
-									<a class="mui-navigate-right">
-										台式机
-									</a>
+								<li class="mui-table-view-cell" id="pc2">
+									<a class="mui-navigate-right">台式机</a>
 								</li>
 							</ul>
+							<input type="hidden" name="type" id="pc_type" value="1">
 							<h5 class="mui-content-padded">请选择问题描述:</h5>
 							<ul class="mui-table-view mui-table-view-radio">
-								<li class="mui-table-view-cell">
-									<a class="mui-navigate-right">
-										电脑蓝屏
-									</a>
-								</li>
-								<li class="mui-table-view-cell mui-selected">
-									<a class="mui-navigate-right">
-										电脑无法开机
-									</a>
-								</li>
-								<li class="mui-table-view-cell ">
-									<a class="mui-navigate-right">
-										电脑不通电
-									</a>
-								</li>
-								<li class="mui-table-view-cell ">
-									<a class="mui-navigate-right">
-										显示器不显示
-									</a>
-								</li><li class="mui-table-view-cell ">
-									<a class="mui-navigate-right">
-										电脑重装系统
-									</a>
-								</li>
-								<li class="mui-table-view-cell ">
-									<a class="mui-navigate-right">
-										电脑除尘
-									</a>
-								</li>
+								<volist name="problems"  id="vo">
+									<if $i == 1>
+										<li class="mui-table-view-cell mui-selected pc_problems" problems_id="{$vo.problems_id}" price="{$vo.price}">
+											<a class="mui-navigate-right">{$vo.name}</a>
+										</li>
+									<else />
+										<li class="mui-table-view-cell pc_problems" problems_id="{$vo.problems_id}" price="{$vo.price}">	
+											<a class="mui-navigate-right">{$vo.name}</a>
+										</li>		
+									</if>
+								</volist>
 							</ul>
+							<h5 class="mui-content-padded">预估服务费用:¥<sapn id="price" style="color:red;">50</sapn></h5>
+							<input type="hidden" name="problems_id" id="problems_id" value="{$problems[0]['problems_id']}">
 							<h5 class="mui-content-padded">备注信息:</h5>
 							<div class="mui-input-row" style="margin: 10px 5px;">
-								<textarea id="textarea" rows="5" placeholder="其他要求请填写在此处"></textarea>
+								<textarea id="textarea" rows="5" name="des" placeholder="其他问题和要求请填写在此处" form="pc_repair"></textarea>
 							</div>
 							<div class="mui-button-row">
-								<button type="button" class="mui-btn mui-btn-success mui-btn-block">确认</button>
+								<button type="button" class="mui-btn mui-btn-success mui-btn-block" id="btn_ok">确认</button>
 							</div>
 				</form>
+				<div id="info">
+
+				</div>
 			</div>
 		</div>
+		
+		<script type="text/javascript">
+			$(function(){
+				$("#pc1").click(function(){
+					$("#pc_type").val("3");
+				});
+				$("#pc2").click(function(){
+					$("#pc_type").val("4");
+				});
+				
+				$(".pc_problems").click(function(){
+					$("#problems_id").val($(this).attr("problems_id"));
+					$("#price").text($(this).attr("price"));
+				});
+				$("#btn_ok").click(function(){
+					var mobile = $("#mobile").val();
+					var address = $("#address").val();
+					if(address == ''){
+						mui.alert('请填写取货地址', '毅腾科技提醒您');
+						return false;
+			        }
+			        if(!checkMobile(mobile)){
+			        	mui.alert('请填写正确的电话号码', '毅腾科技提醒您');
+			        	return false;
+			        }
+					$("#pc_repair").submit();
+				})
+			});
+		</script>
 </body>
 </html>
