--- a/template/mobile/new2/repair/pc_repair.html
+++ b/template/mobile/new2/repair/pc_repair.html
@@ -33,10 +33,10 @@
 							<h5 class="mui-content-padded">请选择维修类型:</h5>
 							<ul class="mui-table-view mui-table-view-radio">
 								<li class="mui-table-view-cell  mui-selected" id="pc1">
-									<a class="mui-navigate-right">笔记本电脑</a>
+									<a class="mui-navigate-right">台式机</a>
 								</li>
 								<li class="mui-table-view-cell" id="pc2">
-									<a class="mui-navigate-right">台式机</a>
+									<a class="mui-navigate-right">笔记本</a>
 								</li>
 							</ul>
 							<input type="hidden" name="type" id="pc_type" value="1">
@@ -54,7 +54,7 @@
 									</if>
 								</volist>
 							</ul>
-							<h5 class="mui-content-padded">预估服务费用:¥<sapn id="price" style="color:red;">50</sapn></h5>
+							<h5 class="mui-content-padded" style="color:red;display:none" id="price_h5">预估服务费用:¥<sapn id="price">50</sapn></h5>
 							<input type="hidden" name="problems_id" id="problems_id" value="{$problems[0]['problems_id']}">
 							<h5 class="mui-content-padded">备注信息:</h5>
 							<div class="mui-input-row" style="margin: 10px 5px;">
@@ -71,17 +71,41 @@
 		</div>
 		
 		<script type="text/javascript">
+			function get_pc_repair_price(type,problems_id){
+				$.ajax({
+			 		type: "POST",
+		            url: "{:U('Repair/get_repair_price')}",
+		            data: {"type":type,"problems_id":problems_id},
+		            dataType: "json",
+		            success: function (data) {
+		                if (data.status == 1) {
+							$("#price_h5").css("display","block");
+							$("#price").html(data.data);
+		                } else{
+		                	$("#price_h5").css("display","none");
+		                }
+		            }
+				});
+				return true;
+			}
 			$(function(){
+				get_pc_repair_price(1,1);
 				$("#pc1").click(function(){
-					$("#pc_type").val("3");
+					var problems_id = $("#problems_id").val();
+					var price =get_pc_repair_price(1,problems_id);
+					$("#pc_type").val("1");
 				});
 				$("#pc2").click(function(){
-					$("#pc_type").val("4");
+					var problems_id = $("#problems_id").val();
+					var price =get_pc_repair_price(2,problems_id);
+					$("#pc_type").val("2");
 				});
 				
 				$(".pc_problems").click(function(){
-					$("#problems_id").val($(this).attr("problems_id"));
-					$("#price").text($(this).attr("price"));
+					var type = $("#pc_type").val();
+					var problems_id = $(this).attr("problems_id");
+					var price =get_pc_repair_price(type,problems_id);
+					$("#problems_id").val(problems_id);
 				});
 				$("#btn_ok").click(function(){
 					var mobile = $("#mobile").val();
