--- a/template/mobile/new2/index/index.html
+++ b/template/mobile/new2/index/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="content">
             <div class="ds-in-bl logo">
-                <a href=""><img src="__STATIC__/images/logo.png" alt="LOGO"></a>
+                <a href=""><img src="{$logo_url}" alt="LOGO"></a>
             </div>
             <div class="ds-in-bl search">
                 <div class="sea-box  ">
