--- a/template/mobile/new2/repair/order_check.html
+++ b/template/mobile/new2/repair/order_check.html
@@ -20,7 +20,7 @@
 				<form class="mui-input-group" action="{:U('Mobile/Repair/order_check_info')}" method="post" id="pc_repair">
 							<div class="mui-input-row">
 								<label>订单号:</label>
-								<input type="text" name="order_sn" placeholder="请输入订单号">
+								<input type="text" name="phone" placeholder="请输入手机号">
 							</div>
 							<div class="mui-button-row">
 								<button type="submit" class="mui-btn mui-btn-success mui-btn-block" id="btn_ok">确认</button>
