--- a/template/mobile/new2/repair/address_select.html
+++ b/template/mobile/new2/repair/address_select.html
@@ -41,7 +41,7 @@
 		background-color: #4cd964;
 	}
 	</style>
-	<script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=mGfEV1leFmIiYXXm4dUoqTE1CTkcAMPH"></script>
+	<script charset="utf-8" src="https://3gimg.qq.com/lightmap/components/geolocation/geolocation.min.js "></script>
 	</head>
 </head>
 <body>
@@ -51,13 +51,16 @@
 	<div id="up-map-div2">
 		<div class="mui-content address">
 			<div class="mui-content-padded" style="margin: 5px;">
-				<form class="mui-input-group">
-				<div class="mui-input-row">
-					<input type="text" class="system_location"  placeholder="定位中..." disabled>
+				<form class="mui-input-group address_form" method="post" action="/mobile/repair/{$source}">
+					<div class="mui-input-row">
+						<input type="text" name="system_location" class="system_location"  placeholder="定位中..." readonly="true">
 					</div>
 					<div class="mui-input-row">
-						<input type="text" class="mui-input-clear user_location" placeholder="定位中...">
+						<input type="text" name="user_location" class="mui-input-clear user_location" placeholder="定位中...">
 					</div>
+					<input type="hidden" id="lat" name="lat" value="123">
+					<input type="hidden" id="lng" name="lng" value="123">
+					<input type="hidden" name="info" value="{$info}">
 				</form>
 				<div class="mui-button-row">
 					<button type="button" class="mui-btn mui-btn-primary btn1" onclick="back_repair()">确认</button>
@@ -65,91 +68,107 @@
 			</div>
 		</div>
 	</div>
-	<!--百度地图容器-->
+	<!--腾讯地图容器-->
   	<div style="width:100%;height:100%;border:#ccc solid 1px;position:absolute;" id="container">
 
 </body>
 
-<script type="text/javascript">
-	var map = new BMap.Map("container");          // 创建地图实例  
-	// var point = new BMap.Point(116.404, 39.915);  // 创建点坐标  
-
-	map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放 
-	
+<script>
 	var lat = 0;
 	var lng = 0;
+	var new_positon = null;
+	var geolocation = new qq.maps.Geolocation("PQKBZ-VCRC6-TJCSQ-EJIGY-ZJXY2-WFFSN", "myapp");
+    var positionNum = 0;
+    var options = {timeout: 8000};
+        function showPosition(position) {
+        	//设置地图中心点
+		  	var myLatlng = new qq.maps.LatLng(position.lat,position.lng);
+		  	//定义工厂模式函数
+	  		var myOptions = {
+			    zoom: 20,               //设置地图缩放级别
+			    center: myLatlng,      //设置中心点样式
+			    mapTypeId: qq.maps.MapTypeId.ROADMAP,  //设置地图样式详情参见MapType
+			    disableDefaultUI: true,
+		  	}
+			//获取dom元素添加地图信息
+			var map = new qq.maps.Map(document.getElementById("container"), myOptions);
 
-	var geolocation = new BMap.Geolocation();
-	
-	geolocation.getCurrentPosition(function(r){
-		if(this.getStatus() == BMAP_STATUS_SUCCESS){
-			setTimeout(function(){
-			        var convertor = new BMap.Convertor();
-			        var pointArr = [];
-			        lat = r.point.lat;
-			        lng = r.point.lng;
-			        pointArr.push(r.point);
-			        convertor.translate(pointArr, 1, 5, translateCallback);
-			    }, 1000);
+			//监听拖动地图事件
+			qq.maps.event.addListener(map, 'center_changed', function() {
+				new_positon = map.getCenter();
+				lat = new_positon.lat;
+				lng = new_positon.lng;
+				get_address_info(new_positon);
+	        });
+
+			lat = position.lat;
+			lng = position.lng;
+
+		    positionNum ++;
+		    get_address_info(position);
+
+        };
+ 	
+        function showErr() {
+        	alert("定位失败");
+            positionNum ++;
+        };
+ 
+        function showWatchPosition() {
+            geolocation.watchPosition(showPosition);
+        };
+ 
+        function showClearWatch() {
+            geolocation.clearWatch();
+        };
+
+        function init() {
+          geolocation.getLocation(showPosition, showErr, options);
 		}
-		else {
-			alert('failed'+this.getStatus());
-		}        
-	});
+		  //异步加载地图库函数文件
+		function loadScript() {
+		  //创建script标签
+		  var script = document.createElement("script");
+		  //设置标签的type属性
+		  script.type = "text/javascript";
+		  //设置标签的链接地址
+		  script.src = "http://map.qq.com/api/js?v=2.exp&callback=init";
+		  //添加标签到dom
+		  document.body.appendChild(script);
+		}
+		  
+		window.onload = loadScript;    // dom文档加载结束开始加载 此段代码
 
-    //坐标转换完之后的回调函数
-    translateCallback = function (data){
-      if(data.status === 0) {
-        map.centerAndZoom(data.points[0], 19);
+		function get_address_info(position){
+			var data1={
+    　　　　　　location:position.lat+","+position.lng,
+              /*换成自己申请的key*/
+    　　　　　　key:"PQKBZ-VCRC6-TJCSQ-EJIGY-ZJXY2-WFFSN",
+    　　　　　　get_poi:1,
+    			poi_options:'address_format=short;radius=500;page_size=10;page_index=1;policy=2',
+    			output:"jsonp",
+    　　　　};
+		    var url="http://apis.map.qq.com/ws/geocoder/v1/?";
+		    $.ajax({
+		        type:"get",
+		        dataType:'jsonp',
+		        data:data1,
+		        jsonp:"callback",
+		        jsonpCallback:"QQmap",
+		        url:url,
+		        success:function(result){
+		            $(".system_location").val(result.result.pois[0].title);
+		            $(".user_location").val(result.result.pois[0].address);
+		            $("#lat").val(result.result.location.lat);
+		            $("#lng").val(result.result.location.lng);
+		        },
+		        error : function(err){alert("服务端错误，请刷新浏览器后重试")}
 
-		myGeo.getLocation(data.points[0],
-	        function mCallback(rs){
-	            var allPois = rs.surroundingPois;       //获取全部POI（该点半径为100米内有6个POI点）
-	            // for(i=0;i<allPois.length;++i){
-	            //     // document.getElementById("panel").innerHTML += "<p style='font-size:12px;'>" + (i+1) + "、" + allPois[i].title + ",地址:" + allPois[i].address + "</p>";
-	            //     map.addOverlay(new BMap.Marker(allPois[i].point));                
-	            // }
-	            $(".system_location").val(allPois[0]['title']);
-	            $(".user_location").val(allPois[0]['address']);
-	        },mOption
-	    );
-      }
-    }
+			});
+		}
 
-    var mOption = {
-	    poiRadius : 500,           //半径为1000米内的POI,默认100米
-	    numPois : 12                //列举出50个POI,默认10个
-	}
-
-	var myGeo = new BMap.Geocoder();        //创建地址解析实例
-
-
-    //监听地图移动事件
-	map.addEventListener("dragend", function(){
-		// map.clearOverlays();
-		var center =map.getCenter();
-		var point = new BMap.Point(center.lng,center.lat);
-	 	lat = center.lat;
-        lng = center.lng;
-		// var mk = new BMap.Marker(point);
-		// map.addOverlay(mk);
-		map.panTo(point);    
-		// alert("地图中心点变更为："+ center.lng +", "+ center.lat);
-		myGeo.getLocation(point,
-	        function mCallback(rs){
-	            var allPois = rs.surroundingPois;       //获取全部POI（该点半径为100米内有6个POI点）
-	            // for(i=0;i<allPois.length;++i){
-	            //     // document.getElementById("panel").innerHTML += "<p style='font-size:12px;'>" + (i+1) + "、" + allPois[i].title + ",地址:" + allPois[i].address + "</p>";
-	            //     map.addOverlay(new BMap.Marker(allPois[i].point));                
-	            // }
-	            $(".system_location").val(allPois[0]['title']);
-	            $(".user_location").val(allPois[0]['address']);
-	        },mOption);
-	});
-
-	//返回维修界面
-	function back_repair(){
-		var source = {$source|default="pc_repire"};
-	}
+		function back_repair(){
+			$(".address_form").submit();
+		}
 </script>
 </html>
