--- a/template/mobile/new2/repair/order_check.html
+++ b/template/mobile/new2/repair/order_check.html
@@ -19,7 +19,7 @@
 			<div class="mui-content-padded" style="margin: 5px;">
 				<form class="mui-input-group" action="{:U('Mobile/Repair/order_check_info')}" method="post" id="pc_repair">
 							<div class="mui-input-row">
-								<label>订单号:</label>
+								<label>手机号:</label>
 								<input type="text" name="phone" placeholder="请输入手机号">
 							</div>
 							<div class="mui-button-row">
