--- a/template/mobile/new2/repair/address_select.html
+++ b/template/mobile/new2/repair/address_select.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>电脑维护</title>
+    <title>位置定位</title>
     <script src="__STATIC__/js/jquery-3.1.1.min.js"></script>
     <script src="__STATIC__/js/mui.min.js"></script>
     <script src="__PUBLIC__/js/global.js"></script>
