--- a/template/mobile/new2/repair/contact.html
+++ b/template/mobile/new2/repair/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>手机维护</title>
+    <title>联系我们</title>
     <script src="__STATIC__/js/mui.min.js"></script>
     <script src="__STATIC__/js/jquery-3.1.1.min.js"></script>
     <script src="__PUBLIC__/js/global.js"></script>
@@ -14,9 +14,6 @@
     <script src="__STATIC__/js/mui.poppicker.js"></script>
 </head>
 <body>
-		<header id="header" class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">联系我们</h1>
-		</header>
 		<div class="mui-content">
 			<div class="mui-content-padded" style="margin: 5px;">
 				<h3>电脑销售、监控、打印机、LED、公司业务对接！</h3>
