--- a/template/mobile/new2/repair/mobile_price.html
+++ b/template/mobile/new2/repair/mobile_price.html
@@ -3,12 +3,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>安卓手机</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>手机报价</title>
     <script src="__STATIC__/js/jquery-3.1.1.min.js"></script>
-    <script src="__STATIC__/js/mui.min.js"></script>
-    <script src="__PUBLIC__/js/global.js"></script>
-    <link type="text/css" href="__STATIC__/css/mui.min.css" rel="stylesheet"/>
 </head>
 <body>
 <!--   	<img src="/public/images/marker_red_sprite.png" style="" /> -->
