--- a/template/mobile/new2/repair/mobile_repair.html
+++ b/template/mobile/new2/repair/mobile_repair.html
@@ -130,10 +130,10 @@
 				var mobile = $("#mobile").val();
 				var address = $("#address1").val();
 				var mobile_bid = $("#mobile_bid").val();
-				if(address == ''){
-					mui.alert('请填写取货地址', '毅腾科技提醒您');
-					return false;
-		        }
+				// if(address == ''){
+				// 	mui.alert('请填写取货地址', '毅腾科技提醒您');
+				// 	return false;
+		  //       }
 		        if(!checkMobile(mobile)){
 		        	mui.alert('请填写正确的电话号码', '毅腾科技提醒您');
 		        	return false;
